// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders RTL styling 1`] = `
<div
  className="c-chk__message is-rtl "
  data-garden-id="checkboxes.message"
  data-garden-version="version"
/>
`;

exports[`Message renders default styling 1`] = `
<div
  className="c-chk__message "
  data-garden-id="checkboxes.message"
  data-garden-version="version"
/>
`;

exports[`Message validation renders error styling if provided 1`] = `
<div
  className="c-chk__message c-chk__message--error "
  data-garden-id="checkboxes.message"
  data-garden-version="version"
/>
`;

exports[`Message validation renders success styling if provided 1`] = `
<div
  className="c-chk__message c-chk__message--success "
  data-garden-id="checkboxes.message"
  data-garden-version="version"
/>
`;

exports[`Message validation renders warning styling if provided 1`] = `
<div
  className="c-chk__message c-chk__message--warning "
  data-garden-id="checkboxes.message"
  data-garden-version="version"
/>
`;
